--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+
+  <app-navbar></app-navbar>
+  <!--<app-new-request></app-new-request>-->
+  <!--<router-outlet></router-outlet>-->
+  <app-home></app-home>
+  <app-footer></app-footer>
+
+
+ 
+
