--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,21 @@
 
   <app-navbar></app-navbar>
   <!--<app-new-request></app-new-request>-->
-  <!--<router-outlet></router-outlet>-->
-  <app-home></app-home>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <app-side-navbar></app-side-navbar>
+    </div>
+
+    <div class="col-md-10">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+  
+  <!--<app-home></app-home>-->
   <app-footer></app-footer>
 
 
