--- a/src/app/new-request/new-request.component.html
+++ b/src/app/new-request/new-request.component.html
@@ -1,14 +1,21 @@
 
 <div id="wizardStepDiv">
-  <ul class="steps" >
-  <li >
-    <a href="">1</a>
+  <ul class="steps pull-right" >
+  <li routerLinkActive="active">
+    <a routerLink="/new">1</a>
   </li>
+
    <li>
     <a href="">2</a>
   </li>
-   <li id="one">
+   <li >
     <a href="">3</a>
+  </li>
+   <li>
+    <a href="">4</a>
+  </li>
+   <li id="one">
+    <a href="">5</a>
   </li>
 </ul>
 </div>
