--- a/src/app/new-request/port/port.component.html
+++ b/src/app/new-request/port/port.component.html
@@ -1,3 +1,82 @@
-<p>
-  port works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      <form class="form-inline">
+        <fieldset>
+          <legend>Port Details</legend>
+         
+          <div class="form-group">
+            <label for="hostname">Port Number</label>
+            <input type="email" class="form-control"
+              id="hostname" placeholder="">
+          </div>
+
+          <div class="form-group">
+            <label for="select">Protocol</label>
+
+            <select class="form-control" id="select">
+              <option>TCP</option>
+              <option>UDP</option>
+            </select>
+          </div>
+
+          <div class="form-group" style="padding-left: 5px;">
+            <button type="submit" id="btn-add-src" class="btn btn-success">Add</button>
+          </div>
+
+        </fieldset>
+
+      </form>
+    </div>
+  </div>
+<br>
+  <div class="row">
+    <div class="col-sm-12" >
+      <table class="table table-striped table-hover ">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Port Number</th>
+            <th>Protocol</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>1111</td>
+            <td>TCP</td>
+            <td>
+                <button type="submit" class="btn btn-default btn-xs">delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>2222</td>
+            <td>UDP</td>
+            <td>
+                <button type="submit" class="btn btn-default btn-xs">delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>3333</td>
+            <td>TCP</td>
+            <td>
+                <button type="submit" class="btn btn-default btn-xs">delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  
+  <div class="row">
+    <div class="col-sm-12">
+       <button type="submit" class="btn btn-default pull-left" (click)="onBack()">Back</button>
+       <button type="submit" class="btn btn-success pull-right" (click)="onNext()">Next</button>
+    </div>
+  </div>
+
+</div>
