--- a/src/app/new-request/source/source.component.html
+++ b/src/app/new-request/source/source.component.html
@@ -1,7 +1,38 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <form class="form-inline">
+
+      <legend>Source Details</legend>
+
+        <div class="form-group col-sm-5" style="padding: 0px;">
+          <label for="hostname" class="">Hostname</label>
+          <input type="email" class="form-control"
+            id="hostname" placeholder="">
+        </div>
+
+        <div class="form-group col-sm-5" style="padding: 0px 10px;">
+          <label for="hostname" class="">IP/Subnet</label>
+          <input type="email" class="form-control"
+            id="hostname" placeholder="">
+        </div>
+
+        <div class="form-group col-sm-2" style="padding: 0px;">
+          <label for="select">Location</label>
+
+          <select class="form-control" id="select">
+              <option>AB</option>
+              <option>BC</option>
+              <option>ON</option>
+            </select>
+        </div>
+
+      <div class="col-sm-2" style="padding-left: 0px;" >
+          
+          <button type="submit" class="btn btn-success btn-block " >Add</button>
+
+        </div>
+        
+        <!--
         <fieldset>
           <legend>Source</legend>
           <div class="form-group">
@@ -29,14 +60,55 @@
             <button type="submit" id="btn-add-src" class="btn btn-success">Add</button>
           </div>
 
-        </fieldset>
+        </fieldset>-->
 
-      </form>
+  
     </div>
   </div>
 <br>
-  <div class="row">
-    <div class="col-sm-12" >
+   <table class="table table-striped table-hover ">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Hostname</th>
+            <th>IP/Subnet</th>
+            <th>Location</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Hostname 1</td>
+            <td>192.168.1.1</td>
+            <td>AB</td>
+            <td>
+              <button type="submit" class="btn btn-danger btn-xs">delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Hostname 2</td>
+            <td>192.168.1.2</td>
+            <td>BC</td>
+            <td>
+              <button type="submit" class="btn btn-danger btn-xs">delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Hostname 3</td>
+            <td>192.168.1.3</td>
+            <td>ON</td>
+            <td>
+              <button type="submit" class="btn btn-danger btn-xs">delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+  <!--<div class="row">
+    <div class="col-sm-12">
       <table class="table table-striped table-hover ">
         <thead>
           <tr>
@@ -54,7 +126,7 @@
             <td>192.168.1.1</td>
             <td>AB</td>
             <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
+              <button type="submit" class="btn btn-default btn-xs">delete</button>
             </td>
           </tr>
           <tr>
@@ -63,7 +135,7 @@
             <td>192.168.1.2</td>
             <td>BC</td>
             <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
+              <button type="submit" class="btn btn-default btn-xs">delete</button>
             </td>
           </tr>
           <tr>
@@ -72,19 +144,23 @@
             <td>192.168.1.3</td>
             <td>ON</td>
             <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
+              <button type="submit" class="btn btn-default btn-xs">delete</button>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-  </div>
-
-  
-  <div class="row">
-    <div class="col-sm-12">
-       <button type="submit" class="btn btn-success pull-right">Next</button>
+  </div>-->
+  <div class="col-sm-12" style="padding:0;">
+      <button type="submit" class="btn btn-success pull-right"
+        (click)="onNext()">Next ></button>
     </div>
-  </div>
+
+  <!--<div class="row">
+    <div class="col-sm-12">
+      <button type="submit" class="btn btn-success pull-right"
+        (click)="onNext()">Next</button>
+    </div>
+  </div>-->
 
 </div>
