--- a/src/app/new-request/summary/summary.component.html
+++ b/src/app/new-request/summary/summary.component.html
@@ -1,3 +1,8 @@
-<p>
-  summary works!
-</p>
+
+  <legend>Project Details</legend>
+  
+ 
+ <div class="col-sm-12">
+       <button type="submit" class="btn btn-default pull-left" (click)="onBack()">Back</button>
+       <button type="submit" class="btn btn-success pull-right" (click)="onSubmit()">Submit</button>
+    </div>
