--- a/src/app/new-request/source/source.component.html
+++ b/src/app/new-request/source/source.component.html
@@ -2,110 +2,105 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <legend>Source Details</legend>
-
-        <div class="form-group col-sm-5" style="padding: 0px;">
-          <label for="hostname" class="">Hostname</label>
-          <input type="email" class="form-control"
-            id="hostname" placeholder="">
-        </div>
-
-        <div class="form-group col-sm-5" style="padding: 0px 10px;">
-          <label for="hostname" class="">IP/Subnet</label>
-          <input type="email" class="form-control"
-            id="hostname" placeholder="">
-        </div>
-
-        <div class="form-group col-sm-2" style="padding: 0px;">
-          <label for="select">Location</label>
-
-          <select class="form-control" id="select">
-              <option>AB</option>
-              <option>BC</option>
-              <option>ON</option>
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <div id="source-data">
+          <legend>Source Details</legend>
+          <div class="form-group col-sm-5" style="padding: 0px;">
+            <label for="hostname" class="">*Hostname</label>
+            <input 
+              type="text" 
+              class="form-control" 
+              id="hostname"
+              ngModel
+              name="hostname"
+              required
+              #hostname="ngModel"
+              >
+              <!--<span class="help-block" *ngIf="!hostname.valid && hostname.touched">Please enter hostname.</span>-->
+              
+           
+          </div>
+          <div class="form-group col-sm-5" style="padding: 0px 10px;">
+            <label for="ipsubnet" class="">*IP/Subnet</label>
+            <input 
+              type="text" 
+              class="form-control" 
+              id="ipsubnet"
+              ngModel
+              name="ipsubnet"
+              required
+              #ipsubnet="ngModel">
+              <!--<span class="help-block" *ngIf="!ipsubnet.valid && ipsubnet.touched">Please enter valid ip/subnet.</span>-->
+              
+          </div>
+          <div class="form-group col-sm-2" style="padding: 0px;">
+            <label for="location">*Location</label>
+            <select 
+              class="form-control" 
+              id="location"
+              ngModel
+              name="location"
+              required
+              #location="ngModel"
+              [ngModel]="defaultLocation">
+              <option value="AB">AB</option>
+              <option value="BC">BC</option>
+              <option value="ON">ON</option>
             </select>
+             <!--<span class="help-block" *ngIf="!location.valid && location.touched">Please select location.</span>-->
+          </div>
         </div>
 
-      <div class="col-sm-2" style="padding-left: 0px;" >
-          
-          <button type="submit" class="btn btn-success btn-block " >Add</button>
 
-        </div>
-        
-        <!--
-        <fieldset>
-          <legend>Source</legend>
-          <div class="form-group">
-            <label for="hostname" class="">Hostname</label>
-            <input type="email" class="form-control"
-              id="hostname" placeholder="">
-          </div>
-          <div class="form-group">
-            <label for="hostname">IP/Subnet</label>
-            <input type="email" class="form-control"
-              id="hostname" placeholder="">
-          </div>
-
-          <div class="form-group">
-            <label for="select">Location</label>
-
-            <select class="form-control" id="select">
-              <option>AB</option>
-              <option>BC</option>
-              <option>ON</option>
-            </select>
-          </div>
-
-          <div class="form-group" style="padding-left: 5px;">
-            <button type="submit" id="btn-add-src" class="btn btn-success">Add</button>
-          </div>
-
-        </fieldset>-->
-
+      
+        <div class="col-sm-12" style="padding: 0px;">
   
+          <button type="submit" class="btn btn-primary " [disabled]="!form.valid" style="margin-top: 5px;">Add</button>
+        </div>
+      </form>
     </div>
   </div>
-<br>
-   <table class="table table-striped table-hover ">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Hostname</th>
-            <th>IP/Subnet</th>
-            <th>Location</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Hostname 1</td>
-            <td>192.168.1.1</td>
-            <td>AB</td>
-            <td>
-              <button type="submit" class="btn btn-danger btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Hostname 2</td>
-            <td>192.168.1.2</td>
-            <td>BC</td>
-            <td>
-              <button type="submit" class="btn btn-danger btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Hostname 3</td>
-            <td>192.168.1.3</td>
-            <td>ON</td>
-            <td>
-              <button type="submit" class="btn btn-danger btn-xs">delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <br>
+  <table class="table table-striped table-hover ">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Hostname</th>
+        <th>IP/Subnet</th>
+        <th>Location</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Hostname 1</td>
+        <td>192.168.1.1</td>
+        <td>AB</td>
+        <td>
+          <button type="submit" class="btn btn-danger btn-xs">delete</button>
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Hostname 2</td>
+        <td>192.168.1.2</td>
+        <td>BC</td>
+        <td>
+          <button type="submit" class="btn btn-danger btn-xs">delete</button>
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Hostname 3</td>
+        <td>192.168.1.3</td>
+        <td>ON</td>
+        <td>
+          <button type="submit" class="btn btn-danger btn-xs">delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
   <!--<div class="row">
     <div class="col-sm-12">
@@ -152,9 +147,9 @@
     </div>
   </div>-->
   <div class="col-sm-12" style="padding:0;">
-      <button type="submit" class="btn btn-success pull-right"
-        (click)="onNext()">Next ></button>
-    </div>
+    <button class="btn btn-success pull-right"
+      (click)="onNext()" [disabled]="!form.valid" >Next</button>
+  </div>
 
   <!--<div class="row">
     <div class="col-sm-12">
