--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,6 +1,3 @@
-Body {
-      font-family: tultralightregular, "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
 
 
 .navbar-container {
@@ -10,6 +7,8 @@ Body {
 
 .navbar-brand {
     padding: 13.5px 15px 12.5px;
+
+
 }
 
 
@@ -20,7 +19,7 @@ Body {
 
 
 .navbar-default .navbar-brand {
- font-family: "tlightregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+ font-family: tultralightregular, "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 40px;
     font-weight: 100;
     text-shadow: 0 1px 0 #fff;
@@ -29,6 +28,8 @@ Body {
 
 .navbar {
     height: 60px;
+    border: 0px solid transparent; 
+   
 }
 
 
