--- a/src/app/new-request/destination/destination.component.html
+++ b/src/app/new-request/destination/destination.component.html
@@ -1,91 +1,98 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <form class="form-inline">
-        <fieldset>
-          <legend>Destination</legend>
-          <div class="form-group">
-            <label for="hostname" class="">Hostname</label>
-            <input type="email" class="form-control"
-              id="hostname" placeholder="">
-          </div>
-          <div class="form-group">
-            <label for="hostname">IP/Subnet</label>
-            <input type="email" class="form-control"
-              id="hostname" placeholder="">
+       <legend>Destination Details</legend>
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm" novalidate autocomplete="off">
+        <div class="row">
+          <div class="form-group col-sm-5" [ngClass]="{'has-error': hostname.invalid && hostname.touched}">
+            <label for="hostname" class=""><sup>*</sup>Hostname</label>
+            <input 
+              type="text" 
+              class="form-control" 
+              id="hostname"
+              ngModel
+              name="hostname"
+              required
+              #hostname="ngModel"
+             >
+              <div class="text-danger" *ngIf="hostname.touched && hostname.errors">
+                <span class="col-sm-12" style="padding:4px 0 0" *ngIf="hostname.errors.required">
+                    Please enter hostname
+                </span>
+            </div>
           </div>
 
-          <div class="form-group">
-            <label for="select">Location</label>
+          <div class="form-group col-sm-5" [ngClass]="{'has-error': ipsubnet.invalid && ipsubnet.touched}">
+            <label for="ipsubnet" class=""><sup>*</sup>IP/Subnet</label>
+            <input 
+              type="text" 
+              class="form-control" 
+              id="ipsubnet"
+              ngModel
+              name="ipsubnet"
+              required
+              #ipsubnet="ngModel"
+              >
+              <div class="text-danger" *ngIf="ipsubnet.touched && ipsubnet.errors">
+                <span class="col-sm-12" style="padding:4px 0 0" *ngIf="ipsubnet.errors.required">
+                    Please enter IP / subnet
+                </span>
+            </div>     
+          </div>
 
-            <select class="form-control" id="select">
-              <option>AB</option>
-              <option>BC</option>
-              <option>ON</option>
+           <div class="form-group col-sm-2">
+            <label for="location"><sup>*</sup>Location</label>
+            <select 
+              class="form-control" 
+              id="location"
+              ngModel
+              name="location"
+              required
+              #location="ngModel"
+              [ngModel]="defaultLocation"
+              required>
+              <option value="AB">AB</option>
+              <option value="BC">BC</option>
+              <option value="ON">ON</option>
             </select>
           </div>
 
-          <div class="form-group" style="padding-left: 5px;">
-            <button type="submit" id="btn-add-src" class="btn btn-success">Add</button>
-          </div>
+        </div>
+         
+         <div class="row">
 
-        </fieldset>
+        <div class="col-sm-12">
+  
+          <button type="submit" 
+            class="btn btn-success " 
+            [disabled]="!form.valid" 
+            >
+            {{ editMode ? 'Update' : 'Add' }}
+            </button>
 
+            <button
+              class="btn btn-danger"
+              type="button"
+              (click)="onDelete()"
+              *ngIf="editMode">Delete</button>
+              
+              <button class="btn btn-info" type="button" (click)="onClear()">Clear</button>
+        </div>
+         </div>
       </form>
     </div>
   </div>
-<br>
+  <br>
+  <app-source-list *ngIf="next"></app-source-list>
+  <br>
   <div class="row">
-    <div class="col-sm-12" >
-      <table class="table table-striped table-hover ">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Hostname</th>
-            <th>IP/Subnet</th>
-            <th>Location</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Hostname 1</td>
-            <td>192.168.1.1</td>
-            <td>AB</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Hostname 2</td>
-            <td>192.168.1.2</td>
-            <td>BC</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Hostname 3</td>
-            <td>192.168.1.3</td>
-            <td>ON</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-sm-12" style="padding:0;">
+        <button class="btn btn-default"
+        (click)="onBack()">Back</button>
+      <button class="btn btn-success pull-right"
+        (click)="onNext()" [disabled]="!next" >Next</button>
+        
     </div>
   </div>
-
   
-  <div class="row">
-    <div class="col-sm-12">
-       <button type="submit" class="btn btn-default pull-left" (click)="onBack()">Back</button>
-       <button type="submit" class="btn btn-success pull-right" (click)="onNext()">Next</button>
-    </div>
-  </div>
-
 </div>
