--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,4 +1,6 @@
-
+body,html {
+    height: 100vh;
+}
 
 .navbar-container {
     padding: 20px 0px 0px 0px;
@@ -105,6 +107,10 @@ ul.steps a {
 }
 
 
+ul.steps li:not(.active) {
+    background-color: lightgreen;
+}
+
 
 
 /* make sidebar nav vertical */ 
@@ -145,12 +151,35 @@ footer {
 .table {
     padding: 7px 12px;
 }
-
+/*
 input.ng-invalid.ng-touched {
     border: 2px solid #cd3e3e;
 }
 
 select.ng-invalid.ng-touched {
     border: 2px solid #cd3e3e;
+}*/
+
+.footer {
+
+  position: relative;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
+.table tr.active td {
+  background-color: #49166d !important;
+  color: white;
+}
+
+.not-active {
+    pointer-events: none;
+    cursor: default;
+}
