--- a/src/app/new-request/source/source.component.html
+++ b/src/app/new-request/source/source.component.html
@@ -1,22 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-       <legend>Source Details</legend>
+      <legend>Source Details</legend>
       <form (ngSubmit)="onSubmit(form)" #form="ngForm" novalidate autocomplete="off">
         <div class="row">
           <div class="form-group col-sm-5" [ngClass]="{'has-error': hostname.invalid && hostname.touched}">
             <label for="hostname" class=""><sup>*</sup>Hostname</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="hostname"
-              ngModel
-              name="hostname"
-              required
-              #hostname="ngModel"
-             >
-              <div class="text-danger" *ngIf="hostname.touched && hostname.errors">
-                <span class="col-sm-12" style="padding:4px 0 0" *ngIf="hostname.errors.required">
+            <input type="text" class="form-control" id="hostname" ngModel name="hostname" required #hostname="ngModel">
+            <div class="text-danger" *ngIf="hostname.touched && hostname.errors">
+              <span class="col-sm-12" style="padding:4px 0 0" *ngIf="hostname.errors.required">
                     Please enter hostname
                 </span>
             </div>
@@ -24,32 +16,17 @@
 
           <div class="form-group col-sm-5" [ngClass]="{'has-error': ipsubnet.invalid && ipsubnet.touched}">
             <label for="ipsubnet" class=""><sup>*</sup>IP/Subnet</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="ipsubnet"
-              ngModel
-              name="ipsubnet"
-              required
-              #ipsubnet="ngModel"
-              >
-              <div class="text-danger" *ngIf="ipsubnet.touched && ipsubnet.errors">
-                <span class="col-sm-12" style="padding:4px 0 0" *ngIf="ipsubnet.errors.required">
+            <input type="text" class="form-control" id="ipsubnet" ngModel name="ipsubnet" required #ipsubnet="ngModel">
+            <div class="text-danger" *ngIf="ipsubnet.touched && ipsubnet.errors">
+              <span class="col-sm-12" style="padding:4px 0 0" *ngIf="ipsubnet.errors.required">
                     Please enter IP / subnet
                 </span>
-            </div>     
+            </div>
           </div>
 
-           <div class="form-group col-sm-2">
+          <div class="form-group col-sm-2">
             <label for="location"><sup>*</sup>Location</label>
-            <select 
-              class="form-control" 
-              id="location"
-              ngModel
-              name="location"
-              required
-              #location="ngModel"
-              [ngModel]="defaultLocation"
+            <select class="form-control" id="location" ngModel name="location" required #location="ngModel" [ngModel]="defaultLocation"
               required>
               <option value="AB">AB</option>
               <option value="BC">BC</option>
@@ -58,30 +35,24 @@
           </div>
 
         </div>
-         
-         <div class="row">
 
-        <div class="col-sm-12">
-  
-          <button type="submit" 
-            class="btn btn-success btn-sm " 
-            [disabled]="!form.valid" 
-            data-toggle="tooltip" data-placement="top" title="" data-original-title="Tooltip on top"
-            >
-            <!--{{ editMode ? 'Update' : 'Add' }}-->
-            <i *ngIf="!editMode" class="fa fa-plus"></i>
-            <i *ngIf="editMode" class="fa fa-pencil-square-o"></i>
+        <div class="row">
+
+          <div class="col-sm-12">
+
+            <button type="submit" class="btn btn-success btn-sm " [disabled]="!form.valid" data-toggle="tooltip" data-placement="top"
+              title="" data-original-title="Tooltip on top">
+              <i *ngIf="!editMode; else editIcon" class="fa fa-plus"></i>
+
+              <ng-template #editIcon>
+                  <i class="fa fa-pencil-square-o"></i>
+              </ng-template>
             </button>
+            <button class="btn btn-danger btn-sm" type="button" (click)="onDelete()" *ngIf="editMode"> <i class="fa fa-minus"></i></button>
 
-            <button
-              class="btn btn-danger btn-sm"
-              type="button"
-              (click)="onDelete()"
-              *ngIf="editMode"> <i class="fa fa-minus"></i></button>
-              
-              <button class="btn btn-info btn-sm" type="button" (click)="onClear()"><i class="fa fa-eraser"></i></button>
+            <button class="btn btn-info btn-sm" type="button" (click)="onClear()"><i class="fa fa-eraser"></i></button>
+          </div>
         </div>
-         </div>
       </form>
     </div>
   </div>
@@ -90,10 +61,9 @@
   <br>
   <div class="row">
     <div class="col-sm-12" style="padding:0;">
-      <button class="btn btn-success pull-right"
-        (click)="onNext()" [disabled]="!next" >Next</button>
-        
+      <button class="btn btn-success pull-right" (click)="onNext()" [disabled]="!next">Next</button>
+
     </div>
   </div>
-  
+
 </div>
