--- a/src/app/new-request/destination/destination.component.html
+++ b/src/app/new-request/destination/destination.component.html
@@ -62,12 +62,12 @@
   <br>
   <div class="row">
     <div class="col-sm-12">
-       <button class="btn btn-info pull-left btn-sm" (click)="onBack()">
-          <i class="fa fa-arrow-left fa-2x"></i>
+       <button class="btn btn-primary pull-left btn-sm" (click)="onBack()">
+           <i class="fa fa-chevron-circle-left fa-2x"></i>
        </button>
-      <button class="btn btn-success pull-right btn-sm" (click)="onNext()" [disabled]="!next">
+      <button class="btn btn-primary pull-right btn-sm" (click)="onNext()" [disabled]="!next">
         <!--Next-->
-            <i class="fa fa-arrow-right fa-2x"></i>
+             <i class="fa fa-chevron-circle-right fa-2x"></i>
         </button>
 
     </div>
