--- a/src/app/new-request/source/source-list/source-list.component.html
+++ b/src/app/new-request/source/source-list/source-list.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="row">
     <table class="table table-striped table-hover col-sm-12">
       <thead>
@@ -19,4 +20,4 @@
       </tbody>
 </table>
 </div>
-
+</div>
