--- a/src/app/new-request/destination/destination-list/destination-list.component.html
+++ b/src/app/new-request/destination/destination-list/destination-list.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <div class="row">
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover col-sm-12">
       <thead>
         <tr>
           <th>Hostname</th>
@@ -9,11 +9,10 @@
         </tr>
       </thead>
       <tbody>
-       <tr *ngFor="let address of sourceAddresses; let i = index"
-       (click)="onEditItem(i)" style="cursor: pointer;" [class.active]="i == selectedRow">
+       <tr *ngFor="let address of destinationAddresses; let i = index" (click)="onEditItem(i)" style="cursor: pointer;" [class.active]="i == selectedRow">
             <td>{{address.hostname}}</td>
             <td>{{address.ip}}</td>
-            <td>{{address.location}}</td> 
+            <td>{{address.location}}</td>  
         </tr>
       </tbody>
 </table>
