--- a/src/app/new-request/destination/destination.component.html
+++ b/src/app/new-request/destination/destination.component.html
@@ -40,34 +40,38 @@
 
           <div class="col-sm-12">
 
-            <button type="submit" class="btn btn-success btn-sm " [disabled]="!form.valid">
+            <button type="submit" class="btn btn-success btn-sm btn-op-sm" [disabled]="!form.valid">
             <i *ngIf="!editMode; else editIcon" class="fa fa-plus"></i>
 
             <ng-template #editIcon>
-                  <i class="fa fa-pencil-square-o"></i>
+                  <i class="fa fa-pencil"></i>
         
             </ng-template>
                 </button>
 
-            <button class="btn btn-danger btn-sm" type="button" (click)="onDelete()" *ngIf="editMode"> <i class="fa fa-minus"></i></button>
+            <button class="btn btn-danger btn-sm btn-op-sm" type="button" (click)="onDelete()" *ngIf="editMode"> <i class="fa  fa-trash
+"></i></button>
 
-            <button class="btn btn-info btn-sm" type="button" (click)="onClear()"><i class="fa fa-eraser"></i></button>
+            <button class="btn btn-info btn-sm btn-op-sm" type="button" (click)="onClear()"><i class="fa fa-eraser"></i></button>
           </div>
         </div>
       </form>
     </div>
   </div>
   <br>
-  <app-source-list *ngIf="next"></app-source-list>
+
+  <!--show table-->
+  <app-destination-list *ngIf="next">  </app-destination-list>
+
   <br>
   <div class="row">
     <div class="col-sm-12">
-       <button class="btn btn-primary pull-left btn-sm" (click)="onBack()">
-           <i class="fa fa-chevron-circle-left fa-2x"></i>
+       <button class="btn btn-success pull-left btn-sm btn-arrow" (click)="onBack()">
+           <i class="fa fa-arrow-left fa-2x"></i>
        </button>
-      <button class="btn btn-primary pull-right btn-sm" (click)="onNext()" [disabled]="!next">
+      <button class="btn btn-success pull-right btn-sm btn-arrow" (click)="onNext()" [disabled]="!next">
         <!--Next-->
-             <i class="fa fa-chevron-circle-right fa-2x"></i>
+             <i class="fa fa-arrow-right fa-2x"></i>
         </button>
 
     </div>
