--- a/src/app/new-request/port/port.component.html
+++ b/src/app/new-request/port/port.component.html
@@ -1,81 +1,79 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <form class="form-inline">
-        <fieldset>
-          <legend>Port Details</legend>
-         
-          <div class="form-group">
-            <label for="hostname">Port Number</label>
-            <input type="email" class="form-control"
-              id="hostname" placeholder="">
+      <legend>Destination Details</legend>
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm" novalidate autocomplete="off">
+        <div class="row">
+          <div class="form-group col-sm-5" [ngClass]="{'has-error': hostname.invalid && hostname.dirty}">
+            <label for="hostname" class=""><sup>*</sup>Port</label>
+            <input type="text" class="form-control" id="hostname" ngModel name="hostname" required #hostname="ngModel">
+            <div class="text-danger" *ngIf="hostname.touched && hostname.errors">
+              <span class="col-sm-12" style="padding:4px 0 0" *ngIf="hostname.errors.required">
+                    Please enter port
+                </span>
+            </div>
           </div>
 
-          <div class="form-group">
-            <label for="select">Protocol</label>
+          <div class="form-group col-sm-5" [ngClass]="{'has-error': ipsubnet.invalid && ipsubnet.dirty}">
+            <label for="ipsubnet" class=""><sup>*</sup>IP/Subnet</label>
+            <input type="text" class="form-control" id="ipsubnet" ngModel name="ipsubnet" required #ipsubnet="ngModel">
+            <div class="text-danger" *ngIf="ipsubnet.dirty && ipsubnet.errors">
+              <span class="col-sm-12" style="padding:4px 0 0" *ngIf="ipsubnet.errors.required">
+                    Please enter IP / subnet
+                </span>
+            </div>
+          </div>
 
-            <select class="form-control" id="select">
-              <option>TCP</option>
-              <option>UDP</option>
+          <div class="form-group col-sm-2">
+            <label for="location"><sup>*</sup>Location</label>
+            <select class="form-control" id="location" ngModel name="location" required #location="ngModel" [ngModel]="defaultLocation"
+              required>
+              <option value="AB">AB</option>
+              <option value="BC">BC</option>
+              <option value="ON">ON</option>
             </select>
           </div>
 
-          <div class="form-group" style="padding-left: 5px;">
-            <button type="submit" id="btn-add-src" class="btn btn-success">Add</button>
+        </div>
+
+        <div class="row">
+
+          <div class="col-sm-12">
+
+            <button type="submit" class="btn btn-success btn-sm btn-op-sm" [disabled]="!form.valid">
+            <i *ngIf="!editMode; else editIcon" class="fa fa-plus"></i>
+
+            <ng-template #editIcon>
+                  <i class="fa fa-pencil"></i>
+        
+            </ng-template>
+                </button>
+
+            <button class="btn btn-danger btn-sm btn-op-sm" type="button" (click)="onDelete()" *ngIf="editMode"> <i class="fa  fa-trash
+"></i></button>
+
+            <button class="btn btn-info btn-sm btn-op-sm" type="button" (click)="onClear()"><i class="fa fa-eraser"></i></button>
           </div>
-
-        </fieldset>
-
+        </div>
       </form>
     </div>
   </div>
-<br>
-  <div class="row">
-    <div class="col-sm-12" >
-      <table class="table table-striped table-hover ">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Port Number</th>
-            <th>Protocol</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>1111</td>
-            <td>TCP</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>2222</td>
-            <td>UDP</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>3333</td>
-            <td>TCP</td>
-            <td>
-                <button type="submit" class="btn btn-default btn-xs">delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+  <br>
 
-  
+  <!--show table-->
+  <app-destination-list *ngIf="next">  </app-destination-list>
+
+  <br>
   <div class="row">
     <div class="col-sm-12">
-       <button type="submit" class="btn btn-default pull-left" (click)="onBack()">Back</button>
-       <button type="submit" class="btn btn-success pull-right" (click)="onNext()">Next</button>
+       <button class="btn btn-success pull-left btn-sm btn-arrow" (click)="onBack()">
+           <i class="fa fa-arrow-left fa-2x"></i>
+       </button>
+      <button class="btn btn-success pull-right btn-sm btn-arrow" (click)="onNext()" [disabled]="!next">
+        <!--Next-->
+             <i class="fa fa-arrow-right fa-2x"></i>
+        </button>
+
     </div>
   </div>
 
