Updated port details

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="./" class="navbar-brand">
-      <img src="assets/images/TELUS-logo.svg" height="150%">NAK</a>
+      <img src="assets/images/net.svg" height="150%">NAK</a>
 
       <button class="navbar-toggle" type="button"
         data-toggle="collapse" data-target="#navbar-main">
